--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <div class="ui three column grid images">
 
 
-            <div class="ui move reveal center aligned ">
+            <div class="ui rotate reveal center aligned ">
                 <div class="visible content">
                     <img src="/images/hero-1.png" class="ui small image">
                 </div>
@@ -317,7 +317,7 @@
             <div class="ui center aligned container">
                 <div class="ui stackable inverted divided grid">
                     <div class="three wide column">
-                        <h4 class="ui inverted header">Group 1</h4>
+                        <h4 class="ui inverted header">About</h4>
                         <div class="ui inverted link list">
                             <a href="#" class="item">Home</a>
                             <a href="#" class="item">Eyes</a>
@@ -326,10 +326,10 @@
                         </div>
                     </div>
                     <div class="three wide column">
-                        <h4 class="ui inverted header">Group 2</h4>
+                        <h4 class="ui inverted header">What we do</h4>
                         <div class="ui inverted link list">
                             <a href="#" class="item">Back to Top</a>
-                            <a href="#" class="item">FAQ</a>
+                            <a href="#faq" class="item">FAQ</a>
                             <a href="#signup" class="item">Sign up</a>
                             <a href="#services" class="item">Services</a>
 
